--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "require": {
         "php": ">=7.1",
         "ext-pdo": "*",
-        "symfony/symfony": "3.3.*",
+        "symfony/symfony": "3.4.*",
         "twig/twig": "^1.0||^2.0",
         "predis/predis": "^1.1.0",
         "doctrine/orm": "^2.5",
@@ -29,7 +29,7 @@
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "sensio/distribution-bundle": "^5.0.19",
-        "sensio/framework-extra-bundle": "4.0.x-dev",
+        "sensio/framework-extra-bundle": "^5.0",
         "incenteev/composer-parameter-handler": "^2.0",
         "fzaninotto/faker": "^1.6",
         "sentry/sentry": "^1.6",
