--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -68,7 +68,7 @@ framework:
         storage_id: session.storage.mock_file
         name: 'en_marche_session_%kernel.environment%'
     profiler:
-        collect: false
+        enabled: false
     cache:
         app: cache.adapter.null
 
