--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -162,6 +162,9 @@ security:
         ROLE_ADMIN_ADHERENT_TAGS:
             - ROLE_APP_ADMIN_ADHERENT_TAG_ALL
 
+        ROLE_ADMIN_REFERENT_TAGS:
+            - ROLE_APP_ADMIN_REFERENT_TAG_ALL
+
         ROLE_ADMIN_REFERENTS:
             - ROLE_APP_ADMIN_REFERENT_ALL
 
