--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -215,6 +215,7 @@ security:
             - ROLE_ADMIN_DONATIONS
             - ROLE_ADMIN_EMAIL
             - ROLE_ADMIN_ADHERENT_TAGS
+            - ROLE_ADMIN_REFERENT_TAGS
             - ROLE_APP_ADMIN_PAGE_CREATE
             - ROLE_ADMIN_REFERENTS
             - ROLE_ADMIN_REFERENTS_AREAS
