[ch3176] Resent email validation and notify the user to check his mailbox
https://app.clubhouse.io/enmarche/story/3176/mettre-un-message-d-erreur-avec-proposition-de-renvoi-d-e-mail-lorsqu-un-nouvel-adh%C3%A9rent-n-a-pas-valid%C3%A9-son-adresse-mail

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -266,6 +266,7 @@ security:
                 target: homepage
 
         main:
+            user_checker: AppBundle\Security\UserChecker
             context: main_context
             # No pattern means every path is behind this firewall
             provider: users_db
